<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00A79D"
    >
<ImageView 
    android:id="@+id/letras_titulo"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_above="@+id/hele2"
    android:scaleX="0.95"
    android:scaleY="0.95"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:src="@drawable/letras_titulo"
    />   
<ImageView 
    android:id="@+id/hele2"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_above="@+id/spinnerText"
    android:scaleX="0.75"
    android:scaleY="0.75"
    android:layout_centerHorizontal="true"
    android:src="@drawable/hele2"
    />
<TextView  
    android:id="@+id/spinnerText"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:textColor="#FFFFFF"
    android:text="@string/spinner_text"
    android:layout_above="@+id/robot_mode_spinner"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    />

<Spinner
    android:id="@+id/robot_mode_spinner"
    android:prompt="@string/prompt"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:entries="@array/robot_options"
    android:layout_alignParentTop="false"
    style="@style/spinner_style"
    android:layout_above="@+id/helpButton"
    />
<Button
    android:id="@+id/helpButton"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/text_help"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:layout_above="@+id/button"
    android:background="@drawable/button_selector"
    android:textColor="#FFFFFF"
/>
<Button
    android:id="@+id/button"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/text_continue"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:layout_alignParentBottom="true"
    android:background="@drawable/button_selector"
    android:textColor="#FFFFFF"
/>
</RelativeLayout>




