<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="horizontal"
    android:background="#00A79D">


	<SeekBar
        android:id="@+id/manual_left_rgb_red"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:translationX="-125dp"
        android:translationY="35dp"
        android:progress="0"
        android:max="255"
        android:progressDrawable="@drawable/progress_red"
        android:paddingRight="170dp"
        android:rotation="270" 
        android:visibility="gone" />
   <SeekBar
        android:id="@+id/manual_left_rgb_green"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:translationX="-75dp"
        android:translationY="35dp"
        android:progress="0"
        android:max="255"
        android:progressDrawable="@drawable/progress_green"
        android:paddingRight="170dp"
        android:rotation="270" 
        android:visibility="gone"
        />
    <SeekBar
        android:id="@+id/manual_left_rgb_blue"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:translationX="-25dp"
        android:translationY="35dp"
        android:max="255"
        android:progress="0"
        android:progressDrawable="@drawable/progress_blue"
        android:paddingRight="170dp"
        android:rotation="270" 
        android:visibility="gone"
        />
    
    <ImageView
        android:id="@+id/image_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/stop_signal"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/stop" 
        />

    <TextView
        android:id="@+id/valueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        />
    
    
	<!--ImageButton
        android:id="@+id/start"
        android:contentDescription="@string/stop_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/back_led_options"
        android:src="@drawable/start_here_button"
        /-->

    <SeekBar
        android:id="@+id/manual_right_rgb_red"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:translationX="125dp"
        android:translationY="35dp"
        android:max="255"
        android:progress="0"
        android:progressDrawable="@drawable/progress_red"
        android:paddingRight="170dp"
        android:rotation="270"      
        android:visibility="gone" 
        />
    <SeekBar
        android:id="@+id/manual_right_rgb_green"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:translationX="75dp"
        android:translationY="35dp"
        android:max="255"
        android:progressDrawable="@drawable/progress_green"
        android:paddingRight="170dp"
        android:rotation="270"      
        android:progress="0"
        android:visibility="gone"  
        />        
    <SeekBar
        android:id="@+id/manual_right_rgb_blue"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:translationX="25dp"
        android:translationY="35dp"
        android:max="255"
        android:progressDrawable="@drawable/progress_blue"
        android:paddingRight="170dp"
        android:rotation="270"     
        android:progress="0"
        android:visibility="gone"  
        />

    <Button
        android:id="@+id/front_led"
        android:background="@drawable/button_selector"
        android:layout_width="140dp"
        android:layout_height="55dp"
		android:text="@string/front_led_text_automatic"
        android:contentDescription="@string/stop_signal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/back_led"
        android:background="@drawable/button_selector"
        android:layout_width="140dp"
        android:layout_height="55dp"
		android:text="@string/back_led_text_automatic"
        android:contentDescription="@string/stop_signal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/left_rgb_led"
        android:background="@drawable/button_selector"
        android:layout_width="140dp"
        android:layout_height="55dp"
		android:text="@string/text_left_RGB_automatic"
        android:contentDescription="@string/stop_signal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/front_led"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF"
        />
    <Button
        android:id="@+id/right_rgb_led"
        android:background="@drawable/button_selector"
        android:layout_width="140dp"
        android:layout_height="55dp"
		android:text="@string/text_right_RGB_automatic"
        android:contentDescription="@string/stop_signal"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/back_led"
        android:layout_marginBottom="5dp"
        android:textColor="#FFFFFF"
        />
</RelativeLayout>
